--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="design\AtCmd.cs" />
+    <Compile Include="design\CoreBaseNew.cs" />
     <Compile Include="design\TimeOut.cs" />
     <Compile Include="ExecPoll.cs" />
     <Compile Include="misc\env\AtCommand.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="net\deprecated\SockServer.cs" />
     <Compile Include="net\deprecated\TcpServer.cs" />
     <Compile Include="net\deprecated\UdpServer.cs" />
+    <Compile Include="net\SockSessNew.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="net\SockConvert.cs" />
     <Compile Include="net\deprecated\SockPack.cs" />
