refactor layout of mnn

--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -48,34 +48,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="design\AtCmd.cs" />
-    <Compile Include="design\CoreBaseNew.cs" />
-    <Compile Include="design\TimeOut.cs" />
-    <Compile Include="ExecPoll.cs" />
-    <Compile Include="misc\env\AtCommand.cs" />
+    <Compile Include="misc\glue\AtCmd.cs" />
+    <Compile Include="misc\glue\CoreBaseNew.cs" />
+    <Compile Include="misc\glue\TimeOut.cs" />
+    <Compile Include="util\ExecPoll.cs" />
     <Compile Include="misc\env\EnvConst.cs" />
     <Compile Include="misc\env\EnvModule.cs" />
-    <Compile Include="misc\module\IModuleService.cs" />
+    <Compile Include="module\IModuleService.cs" />
     <Compile Include="misc\env\MsgCmd.cs" />
     <Compile Include="misc\env\MsgKey.cs" />
-    <Compile Include="misc\module\AppDomainProxy.cs" />
-    <Compile Include="misc\module\IModule.cs" />
-    <Compile Include="misc\module\Module.cs" />
-    <Compile Include="misc\module\ModuleCtl.cs" />
+    <Compile Include="module\AppDomainProxy.cs" />
+    <Compile Include="module\IModule.cs" />
+    <Compile Include="module\Module.cs" />
+    <Compile Include="module\ModuleCtl.cs" />
     <Compile Include="misc\serial\AsyncSerailPort.cs" />
     <Compile Include="misc\serial\AsyncSerailPortEventArgs.cs" />
-    <Compile Include="design\CoreBase.cs" />
-    <Compile Include="Fifo.cs" />
+    <Compile Include="misc\glue\CoreBase.cs" />
+    <Compile Include="util\Fifo.cs" />
     <Compile Include="net\SockClientTcp.cs" />
-    <Compile Include="misc\service\ServiceRequest.cs" />
-    <Compile Include="misc\service\Service.cs" />
-    <Compile Include="misc\service\ServiceResponse.cs" />
+    <Compile Include="service\ServiceRequest.cs" />
+    <Compile Include="service\Service.cs" />
+    <Compile Include="service\ServiceResponse.cs" />
     <Compile Include="net\deprecated\AsyncSocketListenItem.cs" />
     <Compile Include="net\deprecated\AsyncSocketListenManager.cs" />
     <Compile Include="net\deprecated\AsyncSocketSender.cs" />
     <Compile Include="net\deprecated\ClientEventArgs.cs" />
     <Compile Include="net\deprecated\ListenEventArgs.cs" />
-    <Compile Include="net\deprecated\Logger.cs" />
     <Compile Include="net\deprecated\PipeServer.cs" />
     <Compile Include="net\deprecated\SockServer.cs" />
     <Compile Include="net\deprecated\TcpServer.cs" />
@@ -91,7 +89,7 @@
     <Compile Include="net\EncryptSym.cs" />
     <Compile Include="util\ExprSolve.cs" />
     <Compile Include="util\HumiUtil.cs" />
-    <Compile Include="util\Logger.cs" />
+    <Compile Include="net\deprecated\Logger.cs" />
     <Compile Include="util\MsgAnalizeUitl.cs" />
     <Compile Include="util\RegUtil.cs" />
     <Compile Include="util\SmtpSender.cs" />
