--- a/EnvServer/EnvServer.csproj
+++ b/EnvServer/EnvServer.csproj
@@ -55,8 +55,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SessData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\mnn\mnn.csproj">
