--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -50,7 +50,10 @@
   <ItemGroup>
     <Compile Include="misc\env\SessData.cs" />
     <Compile Include="misc\glue\AtCmd.cs" />
-    <Compile Include="misc\glue\CoreBaseNew.cs" />
+    <Compile Include="misc\glue\IRunable.cs" />
+    <Compile Include="misc\glue\ModulizedServiceLayer.cs" />
+    <Compile Include="misc\glue\BaseLayerNew.cs" />
+    <Compile Include="misc\glue\ServiceLayer.cs" />
     <Compile Include="misc\glue\TimeOut.cs" />
     <Compile Include="util\ExecPoll.cs" />
     <Compile Include="misc\env\EnvConst.cs" />
@@ -64,7 +67,7 @@
     <Compile Include="module\ModuleCtl.cs" />
     <Compile Include="misc\serial\AsyncSerailPort.cs" />
     <Compile Include="misc\serial\AsyncSerailPortEventArgs.cs" />
-    <Compile Include="misc\glue\CoreBase.cs" />
+    <Compile Include="misc\glue\BaseLayer.cs" />
     <Compile Include="util\Fifo.cs" />
     <Compile Include="net\SockClientTcp.cs" />
     <Compile Include="service\ServiceRequest.cs" />
@@ -87,7 +90,7 @@
     <Compile Include="util\ConvertUtil.cs" />
     <Compile Include="util\CrcUtil.cs" />
     <Compile Include="util\DegreeUtil.cs" />
-    <Compile Include="net\EncryptSym.cs" />
+    <Compile Include="util\EncryptSym.cs" />
     <Compile Include="util\ExprSolve.cs" />
     <Compile Include="util\HumiUtil.cs" />
     <Compile Include="net\deprecated\Logger.cs" />
@@ -96,7 +99,9 @@
     <Compile Include="util\SmtpSender.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
