--- a/mnn/mnn.csproj
+++ b/mnn/mnn.csproj
@@ -86,7 +86,7 @@
     <Compile Include="net\deprecated\SockServer.cs" />
     <Compile Include="net\deprecated\TcpServer.cs" />
     <Compile Include="net\deprecated\UdpServer.cs" />
-    <Compile Include="net\SockSessNew.cs" />
+    <Compile Include="net\SockSess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="net\SockConvert.cs" />
     <Compile Include="net\deprecated\SockPack.cs" />
